--- a/Flask App/fly.toml
+++ b/Flask App/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for projectball on 2023-07-15T10:00:06-02:30
+# fly.toml app configuration file generated for projectvall2 on 2023-07-31T16:32:32-02:30
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "projectball"
+app = "projectvall2"
 primary_region = "bos"
 
 [build]
