--- a/Flask App/fly.toml
+++ b/Flask App/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for projectvall2 on 2023-08-01T11:51:16-02:30
+# fly.toml app configuration file generated for europeanfootball on 2023-08-02T14:48:15-02:30
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "projectvall2"
+app = "europeanfootball"
 primary_region = "bos"
 
 [build]
