--- a/Flask App/fly.toml
+++ b/Flask App/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for europeanfootball on 2023-08-02T14:48:15-02:30
+# fly.toml app configuration file generated for europeanfootball on 2023-08-02T15:01:31-02:30
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = "europeanfootball"
-primary_region = "bos"
+primary_region = "yyz"
 
 [build]
   builder = "paketobuildpacks/builder:base"
