--- a/Flask App/fly.toml
+++ b/Flask App/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for europeanfootball on 2023-08-02T15:01:31-02:30
+# fly.toml app configuration file generated for europeanfootball on 2023-08-02T19:58:07-02:30
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -18,3 +18,4 @@ primary_region = "yyz"
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
+  processes = ["app"]
